--- a/tipettino/public/index.html
+++ b/tipettino/public/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
-            name="description"
-            content="Web site created using create-react-app"
+            name="Mr. Tipo personal website"
+            content="Projects, informations and contact me"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
