--- a/tipettino/public/index.html
+++ b/tipettino/public/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/assets/img/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta
-            name="Mr. Tipo personal website"
-            content="Projects, informations and contact me"
-        />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Tipettino</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/assets/img/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta
+			name="Mr. Tipo personal website"
+			content="Projects, informations and contact me"
+		/>
+		<link
+			rel="apple-touch-icon"
+			href="%PUBLIC_URL%/assets/img/logo192.png"
+		/>
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<title>Tipettino</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
 </html>
