fixed bg html color

--- a/tipettino/public/index.html
+++ b/tipettino/public/index.html
@@ -4,13 +4,14 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/assets/img/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#FFFFFF" />
+		<meta name="theme-color" content="#99F6E4" />
 		<meta
 			name="Mr. Tipo personal website"
 			content="Projects, informations and contact me"
 		/>
 		<link
 			rel="apple-touch-icon"
+			sizes="192x192"
 			href="%PUBLIC_URL%/assets/img/logo192.png"
 		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
